Source: get em up
Signed-off-by: nixxholas <nixholas@icloud.com>

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 ENVIRONMENT=Development
+RUST_LOG=debug
 ORDER_MS=http://137.184.249.220:5002
 SHIPPING_MS=http://157.230.195.194:5003
 PRODUCT_MS=http://104.248.98.63:5001
