--- a/place-order-ms-deployment.yaml
+++ b/place-order-ms-deployment.yaml
@@ -7,7 +7,7 @@ metadata:
   creationTimestamp: null
   labels:
     io.kompose.service: place-order-ms
-  name: placeorder
+  name: place-order-ms
 spec:
   replicas: 1
   selector:
@@ -49,7 +49,7 @@ spec:
           name: place-order-ms
           imagePullPolicy: Always
           ports:
-            - containerPort: 3003
+            - containerPort: 3000
           resources: {}
       restartPolicy: Always
       imagePullSecrets:
